Updated name to playlisty, Created create_playlist.html template

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
   <nav>
     <div class="left">
       <div class="logo">
-        <a class="logo_tittle" href="{% url 'home' %}">Listify</a>
+        <a class="logo_tittle" href="{% url 'home' %}">Playlisty</a>
         <img class="logo_img" src="{% static 'img/Spotify_logo.png'%}" alt="" />
       </div>
       <a href="{% url 'home' %}">Home</a>
