--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
     <section id="banner">
         <div>
             <h2 class="welcome">Welcome to</h2>
-            <h1 class="Listify_tittle"> Listify </h1>
+            <h1 class="Listify_tittle"> Playlisty </h1>
             <h1>Create and Custom <br> <span class="spotify">Spotify </span><span class ="playlists">Playlists</span></h1>
             <a type = 'image' class="cssbuttons-io-button" href="#tutorial"> Get started
                 <div class="icon">
@@ -45,5 +45,4 @@
         </div>
     </section>
 </body>
-</html>
 {%  endblock %}
