--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Listify</title>
+    <title>playlisty</title>
     <link rel="stylesheet" href="{% static 'styles/main.css'%}" />
     <link href="https://fonts.cdnfonts.com/css/gotham" rel="stylesheet" />
     <link rel="icon" href="{% static 'img/Spotify_logo.png'%}" />
