--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -20,9 +20,19 @@ a {
     color: white;
 }
 
+li {
+    list-style: none;
+    text-decoration: none;
+}
+
+input:focus {
+    outline: none;
+}
+
 body {
     font-family: 'Gotham', sans-serif;
 }
+
 
 nav {
     z-index: 9999;
@@ -100,6 +110,8 @@ nav .right .log_text {
     font-size: 0.6em;
 }
 
+
+/* ------------HOME------------ */
 #banner {
     padding-top: 4em;
     height: 70vh;
@@ -141,8 +153,7 @@ nav .right .log_text {
 
 }
 
-
-.cssbuttons-io-button {
+#banner .welcome_button {
     margin-top: 5%;
     cursor: pointer;
     background: #CA8DF2;
@@ -165,7 +176,7 @@ nav .right .log_text {
     width: 200px;
 }
 
-.cssbuttons-io-button .icon {
+#banner .welcome_button .icon {
     background: white;
     margin-left: 1em;
     position: absolute;
@@ -181,28 +192,25 @@ nav .right .log_text {
     transition: all 0.3s;
 }
 
-.cssbuttons-io-button:hover .icon {
+#banner .welcome_button:hover .icon {
     width: calc(100% - 0.6em);
 }
 
-.cssbuttons-io-button .icon svg {
+#banner .welcome_button .icon svg {
     width: 1.1em;
     transition: transform 0.3s;
     color: #7b52b9;
 }
 
-.cssbuttons-io-button:hover .icon svg {
+#banner .welcome_button:hover .icon svg {
     transform: translateX(0.1em);
 }
 
-.cssbuttons-io-button:active .icon {
+#banner .welcome_button:active .icon {
     transform: scale(0.95);
 }
 
-#auth {
-    padding-top: 4em;
-}
-
+/* TUTORIAL SECTION */
 #tutorial {
     padding-top: 5em;
     width: 100%;
@@ -237,8 +245,6 @@ nav .right .log_text {
     border-bottom: 1px black solid;
 }
 
-
-
 #tutorial .container .cloud {
     font-size: 3.1em;
     text-align: center;
@@ -249,8 +255,8 @@ nav .right .log_text {
     text-align: center;
 }
 
-.button_step1,
-.logged {
+#tutorial .button_step1,
+#tutorial .logged {
     margin-top: 1em;
     cursor: pointer;
     padding: 12px 24px;
@@ -264,12 +270,12 @@ nav .right .log_text {
     z-index: 1;
 }
 
-.logged {
+#tutorial .logged {
     cursor: auto;
     background-color: #04D94F;
 }
 
-.button_step1:before {
+#tutorial .button_step1:before {
     content: "";
     position: absolute;
     left: 50%;
@@ -284,7 +290,7 @@ nav .right .log_text {
     z-index: -1;
 }
 
-.button_step1:after {
+#tutorial .button_step1:after {
     content: "";
     position: absolute;
     left: 55%;
@@ -300,123 +306,319 @@ nav .right .log_text {
     z-index: -1;
 }
 
-.button_step1:hover {
+#tutorial .button_step1:hover {
     color: #ffffff;
     border: 1px solid #39bda7;
 }
 
-.button_step1:hover:before {
+#tutorial .button_step1:hover:before {
     top: -35%;
     background-color: #04D94F;
     transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
 }
 
-.button_step1:hover:after {
+#tutorial .button_step1:hover:after {
     top: -45%;
     background-color: #04D94F;
     transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
 }
 
 /* CREATE PLAYLIST */
-
 #create_playlist {
     padding-top: 4em;
     height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: white;
 }
-.input{
+
+#create_playlist .container {
+    height: 30%;
+    margin-top: 5%;
+    width: 100%;
+}
+
+.input {
     border: none;
     background-color: transparent;
 }
-#search_song_form {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 20%;
+
+
+#create_playlist .wrapper {
+    margin: 0 auto;
+    background: #ffffff;
+    border-radius: 5px;
+    box-shadow: 0px 1px 5px 3px rgba(0, 0, 0, 0.15);
+    position: relative;
+    width: 40%;
 }
-#search_song_form #playlist_artists{
-    text-align: center;
-    font-size: 1.2em;
+
+#create_playlist #search {
+    width: 100%;
+    border: none;
+    height: 50px;
+    border-radius: 5px;
+    padding: 0px 40px 0px 10px;
+    font-size: 18px;
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
 }
-#playlist_form {
+
+
+#create_playlist .search_button {
+    position: absolute;
+    border: none;
+    background: none;
+    top: 0;
+    right: 0;
+    height: 50px;
+    line-height: 50px;
+    padding: 0;
+    width: 50px;
+}
+
+button:focus {
+    outline: none;
+}
+
+#create_playlist button i {
+    width: 100%;
+    color: #6d7b98;
+    line-height: 50px;
+    font-size: 22px;
+}
+
+#create_playlist .results {
+    padding: 0px;
+}
+
+#create_playlist .results ul {
+    margin: 0;
+    padding: 0;
+}
+
+#create_playlist .results ul li {
+    list-style: none;
+    border-radius: 3px;
+    opacity: 0;
+    display: none;
+    padding: 8px 12px;
+    transition: all .2s linear;
+}
+
+#create_playlist .show .results ul li {
+    cursor: pointer;
+    opacity: 1;
+    display: block;
+}
+
+#create_playlist .results ul li:hover {
+    background: #ececec
+}
+
+#create_playlist .results ul li button {
+    font-size: 1.1em;
+    width: 100%;
+    text-align: left;
+    background-color: transparent;
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
+
+#create_playlist .show .results {
+    padding: 10px;
+}
+
+#create_playlist #playlist_form {
     border-radius: 12px;
-    height: 380px;
-    background-color: #112FD9;
-    width: 30%;
+    height: 50%;
+    background-color: #1D1A27;
+    width: 40%;
     display: flex;
     flex-direction: column;
     border-radius: 12px;
+    margin-bottom: 5em;
 }
-input:focus{
-    outline: none;
-}
-.group {
-    display: flex;
-    line-height: 28px;
-    align-items: center;
-    position: relative;
-    max-width: 190px;
-   }
-   
-   .input_search {
-    width: 100%;
-    height: 40px;
-    line-height: 28px;
-    padding: 0 1rem;
-    padding-left: 2.5rem;
-    border: 2px solid transparent;
-    border-radius: 8px;
-    outline: none;
-    background-color: #f3f3f4;
-    color: #0d0c22;
-    transition: .3s ease;
-   }
-   
-   .input_search::placeholder {
-    color: #9e9ea7;
-   }
-   
-   .input_search:focus, input:hover {
-    outline: none;
-    border-color: rgba(234,76,137,0.4);
-    background-color: #fff;
-    box-shadow: 0 0 0 4px rgb(234 76 137 / 10%);
-   }
-   
-   .icon {
-    position: absolute;
-    left: 1rem;
-    fill: #9e9ea7;
-    width: 1rem;
-    height: 1rem;
-   }
-   
-   
-   
-   
-   
-   
-#playlist_form .top{
+
+#create_playlist #playlist_form .top {
     padding: .7em 1em;
     border-radius: 12px;
-    background-color: #112FD9;
+    background-color: inherit;
     display: flex;
     flex-direction: column;
     gap: 1em;
 }
-#playlist_form .bottom {
-    background-color: #154EBF;
-    height: 100%;
-    
+#create_playlist h2{
+    color: white;
+    font-weight: 600;
+    margin-left: .7em;
+    margin-bottom: 1em;
 }
-#playlist_form .playlist_name{
-    color:white;
+#create_playlist #playlist_form .bottom {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: .2em;
+    background-color: inherit;
+    height: 100%;
+    overflow-y: scroll;
+    padding-left: 7px;
+    border-bottom: 0.5em #332C49 solid;
+}
+
+#create_playlist #playlist_form .bottom::-webkit-scrollbar {
+    width: 7px;
+    background-color: inherit;
+}
+
+#create_playlist #playlist_form .bottom::-webkit-scrollbar-thumb {
+    background-color: #4B4646;
+    border-radius: 15px;
+}
+
+#create_playlist #playlist_form .playlist_name {
+    color: white;
+    color: #BFFCFA;
     font-size: 2.5em;
     font-weight: 600;
 }
-#playlist_form .playlist_desc{
+
+#create_playlist #playlist_form .playlist_desc {
     width: 100%;
     color: rgba(255, 255, 255, 0.6);
+    color: #4B4646;
+    font-size: 1em;
+}
+
+#create_playlist #playlist_form .checks {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 50%;
+}
+
+#create_playlist #playlist_form .check_public {
+    display: flex;
+    align-items: center;
+    gap: .5em;
+}
+
+#create_playlist #playlist_form .check_public p {
+    color: #04D94F;
+    font-weight: 600;
+    font-size: 1.2em;
+}
+
+#create_playlist .submit_botton {
+    cursor: pointer;
+    outline: none;
+    border: none;
+    height: 3em;
+    font-size: 1.3em;
+    font-weight: 800;
+    width: 100%;
+    background-color: #04D94F;
+    color: black;
+    height: 4em;
+    border-bottom-left-radius: 12px;
+    border-bottom-right-radius: 12px;
+}
+
+
+.cbx {
+    position: relative;
+    top: 1px;
+    width: 27px;
+    height: 27px;
+    border: 1px solid #c8ccd4;
+    border-radius: 3px;
+    vertical-align: middle;
+    transition: background 0.1s ease;
+    cursor: pointer;
+    display: block;
+}
+
+.cbx:after {
+    content: '';
+    position: absolute;
+    top: 2px;
+    left: 8px;
+    width: 7px;
+    height: 14px;
+    opacity: 0;
+    transform: rotate(45deg) scale(0);
+    border-right: 2px solid #fff;
+    border-bottom: 2px solid #fff;
+    transition: all 0.3s ease;
+    transition-delay: 0.15s;
+}
+
+.lbl {
+    margin-left: 5px;
+    vertical-align: middle;
+    cursor: pointer;
+}
+
+#cbx:checked~.cbx {
+    border-color: transparent;
+    background: #6871f1;
+    animation: jelly 0.6s ease;
+}
+
+#cbx:checked~.cbx:after {
+    opacity: 1;
+    transform: rotate(45deg) scale(1);
+}
+
+.cntr {
+    position: relative;
+}
+
+@keyframes jelly {
+    from {
+        transform: scale(1, 1);
+    }
+
+    30% {
+        transform: scale(1.25, 0.75);
+    }
+
+    40% {
+        transform: scale(0.75, 1.25);
+    }
+
+    50% {
+        transform: scale(1.15, 0.85);
+    }
+
+    65% {
+        transform: scale(0.95, 1.05);
+    }
+
+    75% {
+        transform: scale(1.05, 0.95);
+    }
+
+    to {
+        transform: scale(1, 1);
+    }
+}
+
+.hidden-xs-up {
+    display: none !important;
+}
+
+#generate_playlist {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2em;
+    width: 100%;
+}
+#generate_playlist h1{
+    color: white;
+    font-size: 2em;
 }
