--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
             <h2 class="welcome">Welcome to</h2>
             <h1 class="Listify_tittle"> Playlisty </h1>
             <h1>Create and Custom <br> <span class="spotify">Spotify </span><span class ="playlists">Playlists</span></h1>
-            <a type = 'image' class="cssbuttons-io-button" href="#tutorial"> Get started
+            <a type = 'image' class="welcome_button" href="#tutorial"> Get started
                 <div class="icon">
                     <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"></path><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z" fill="currentColor"></path></svg>
                 </div>
@@ -16,7 +16,6 @@
         </div>
     </section>
     <div class = "inter" style = "background-image: url('{% static 'svg/wave.svg' %}');"></div>
-    <a name ="tutorial"></a>
     <section id = "tutorial">
         <h2>Get started</h2>
         <div class="container">
