--- a/templates/create_playlist.html
+++ b/templates/create_playlist.html
@@ -42,7 +42,9 @@
         />
       </div>
       <h2>Artists:</h2>
-      <div class="bottom"></div>
+      <div class="bottom">
+        <!-- Artists -->
+      </div>
       <input type="hidden" name="artists" id="list_ids"/>
       <button class="submit_botton" type="submit">Generate playlist</button>
     </form>
