--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -373,7 +373,6 @@ nav .right .log_text {
     flex-direction: column;
     align-items: center;
     background-color: white;
-    background-color: #121212;
 }
 
 #create_playlist .container {
@@ -381,6 +380,7 @@ nav .right .log_text {
     margin-top: 2.5%;
     width: 100%;
     position: relative;
+    display: flex;
 }
 
 .input {
@@ -394,11 +394,9 @@ nav .right .log_text {
     background: white;
     border-radius: 5px;
     box-shadow: 0px 1px 5px 3px rgba(0, 0, 0, 0.15);
-    position: absolute;
     width: 30%;
-    top: 2.5%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    height: 3em;
+
 }
 
 #create_playlist #search {
@@ -423,8 +421,6 @@ nav .right .log_text {
     padding: 0;
     width: 50px;
 }
-
-
 
 #create_playlist button i {
     width: 100%;
