--- a/templates/create_playlist.html
+++ b/templates/create_playlist.html
@@ -2,6 +2,7 @@
 <body>
   <section id="create_playlist">
     <div class="container">
+      <h3>Select the artists</h3>
       <div class="wrapper">
         <input
           type="text"
