Updated generating playlist design

--- a/templates/create_playlist.html
+++ b/templates/create_playlist.html
@@ -1,7 +1,6 @@
 {% extends 'base.html' %} {% load static %} {% block content%}
 <body>
   <section id="create_playlist">
-
     <div class="container">
       <h3>Select the artists</h3>
       <div class="wrapper">
@@ -10,7 +9,7 @@
           name="search"
           id="search"
           placeholder="Type to search"
-          autocomplete="chrome-off"
+          autocomplete="off"
         />
         <button class="search_button"><i class="fa fa-search"></i></button>
         <div class="results">
@@ -20,47 +19,30 @@
     </div>
     <form action="{% url 'generateplaylist' %}" method="POST">
       {% csrf_token %}
-      <div id="playlist_form">
+      <div class="playlist_container">
         <div class="top">
-          <input
-            placeholder="Name"
-            class="playlist_name input"
-            type="text"
-            id="playlist_name"
-            name="name"
-            value="Playlist's Name"
-          />
-          <div class="checks">
-            <div class="check_public">
-              <div class="cntr">
-                <input
-                  name="public"
-                  checked=""
-                  type="checkbox"
-                  id="cbx"
-                  class="hidden-xs-up"
-                />
-                <label for="cbx" class="cbx"></label>
-              </div>
-              <p>Public</p>
-            </div>
+          <div class="input-group">
+            <input
+              required=""
+              type="text"
+              name="name"
+              autocomplete="off"
+              class="input"
+            />
+            <label class="user-label">Playlist's name</label>
           </div>
-          <input
-            placeholder="Description"
-            class="playlist_desc input"
-            type="text"
-            id="playlist_desc"
-            name="desc"
-            value="A playlist generated using playlisty.app"
-          />
         </div>
-        <h2>Artists:</h2>
+        <div class="separator"></div>
         <div class="bottom">
           <!-- Artists -->
         </div>
         <input type="hidden" name="artists" id="list_ids" />
+        <button type = 'image' class="submit_button" type="submit"> Generate playlist
+          <div class="icon">
+              <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"></path><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z" fill="currentColor"></path></svg>
+          </button>
+      </a>
       </div>
-      <button class="submit_botton" type="submit">Generate playlist</button>
     </form>
   </section>
   <script src="{% static 'js/get_artist.js' %}"></script>
