--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -189,13 +189,13 @@ nav .right .log_text {
     font-size: 1.5em;
 }
 
-#banner .welcome {
+.welcome {
     color: white;
     font-size: 1.9em;
 
 }
 
-#banner .welcome_button {
+.welcome_button {
     margin-top: 5%;
     cursor: pointer;
     background: var(--pink);
@@ -218,7 +218,7 @@ nav .right .log_text {
     width: 200px;
 }
 
-#banner .welcome_button .icon {
+.welcome_button .icon {
     background: white;
     margin-left: 1em;
     position: absolute;
@@ -234,21 +234,21 @@ nav .right .log_text {
     transition: all 0.3s;
 }
 
-#banner .welcome_button:hover .icon {
+.welcome_button:hover .icon {
     width: calc(100% - 0.6em);
 }
 
-#banner .welcome_button .icon svg {
+.welcome_button .icon svg {
     width: 1.1em;
     transition: transform 0.3s;
     color: var(--pink);
 }
 
-#banner .welcome_button:hover .icon svg {
+.welcome_button:hover .icon svg {
     transform: translateX(0.1em);
 }
 
-#banner .welcome_button:active .icon {
+.welcome_button:active .icon {
     transform: scale(0.95);
 }
 
@@ -368,7 +368,7 @@ nav .right .log_text {
 /* CREATE PLAYLIST */
 #create_playlist {
     padding-top: 4em;
-    height: 100vh;
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -376,8 +376,9 @@ nav .right .log_text {
 }
 
 #create_playlist .container {
-    height: 30%;
-    margin-top: 2.5%;
+    height: auto;
+    min-height: 350px;
+    padding-top: 2.5em;
     width: 100%;
     position: relative;
 }
@@ -387,10 +388,11 @@ nav .right .log_text {
     background-color: transparent;
 }
 
-#create_playlist .container h3 {
-    font-size: 2em;
+#create_playlist h3 {
+    font-size: clamp(2.3em, 3vw, 3em);
     font-weight: 900;
     text-align: center;
+    padding-bottom: .2em;
 }
 
 #create_playlist .wrapper {
@@ -399,7 +401,7 @@ nav .right .log_text {
     border-radius: 5px;
     box-shadow: 0px 1px 5px 3px rgba(0, 0, 0, 0.15);
     position: relative;
-    width: 40%;
+    width: min(95%, 40em);
 }
 
 #create_playlist #search {
@@ -475,192 +477,122 @@ nav .right .log_text {
 }
 
 #create_playlist form {
+
+    width: 100%;
+}
+
+#create_playlist form .playlist_container {
+    margin: 0 auto;
+    width: min(95%, 40em);
     position: relative;
 }
 
-#create_playlist form #playlist_form {
-    border-radius: 12px;
-    height: 50%;
-    background-color: #232323;
-    width: 100%;
+#create_playlist form .playlist_container .top {
     display: flex;
-    flex-direction: column;
-    border-radius: 12px;
-    margin-bottom: 5em;
+    justify-content: center;
 }
 
-#create_playlist form #playlist_form .top {
-    padding: .7em 1em;
-    border-radius: 12px;
-    background-color: inherit;
-    display: flex;
-    flex-direction: column;
-    gap: 1em;
+#create_playlist form .playlist_container .top .input-group {
+    position: relative;
 }
 
-#create_playlist h2 {
-    color: white;
-    font-weight: 900;
-    margin-left: .7em;
-    margin-bottom: 1em;
-}
-
-#create_playlist form #playlist_form .bottom {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: .2em;
-    background-color: inherit;
-    height: 400px;
-    overflow-y: scroll;
-    padding: .7em 1em;
-    border-radius: 12px;
-    margin-bottom: 10px;
-}
-
-#create_playlist form #playlist_form .bottom::-webkit-scrollbar {
-    width: 7px;
-}
-
-#create_playlist form #playlist_form .bottom::-webkit-scrollbar-thumb {
-    color: red;
-    border-radius: 15px;
-    height: 2px;
-}
-
-#create_playlist form #playlist_form .playlist_name {
-    color: white;
-    color: #BFFCFA;
-    font-size: 2.5em;
-    font-weight: 900;
-}
-
-#create_playlist form #playlist_form .playlist_desc {
-    width: 100%;
-    color: rgba(255, 255, 255, 0.6);
-    color: #4B4646;
-    font-size: 1em;
-
-}
-
-#create_playlist form #playlist_form .checks {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 50%;
-}
-
-#create_playlist form #playlist_form .check_public {
-    display: flex;
-    align-items: center;
-    gap: .5em;
-}
-
-#create_playlist form #playlist_form .check_public p {
-    color: #04D94F;
-    font-weight: 500;
-    font-size: 1.2em;
-}
-
-#create_playlist form .submit_botton {
-    position: absolute;
-    cursor: pointer;
-    outline: none;
-    border: none;
-    height: 3em;
-    font-size: 1.3em;
-    font-weight: 900;
-    width: 100%;
-    background-color: #04D94F;
+#create_playlist form .playlist_container .top .input {
+    border: solid 1.5px #9e9e9e;
+    border-radius: 5px;
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
+    background: none;
+    padding: 0.8rem;
+    font-size: 1rem;
     color: black;
-    height: 2em;
-    bottom: 7.5%;
-    /* border-radius: 12px; */
+    transition: border 150ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-
-.cbx {
-    position: relative;
-    top: 1px;
-    width: 27px;
-    height: 27px;
-    border: 1px solid #c8ccd4;
-    border-radius: 3px;
-    transition: background 0.1s ease;
-    cursor: pointer;
-    display: block;
-}
-
-.cbx:after {
-    content: '';
+#create_playlist form .playlist_container .top .user-label {
     position: absolute;
-    top: 2px;
-    left: 8px;
-    width: 7px;
-    height: 14px;
-    opacity: 0;
-    transform: rotate(45deg) scale(0);
-    border-right: 2px solid #fff;
-    border-bottom: 2px solid #fff;
-    transition: all 0.3s ease;
-    transition-delay: 0.15s;
+    left: 15px;
+    color: rgba(0, 0, 0, 0.5);
+    pointer-events: none;
+    transform: translateY(1rem);
+    transition: 150ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.lbl {
-    margin-left: 5px;
-    vertical-align: middle;
+#create_playlist form .playlist_container .top .input:focus,
+#create_playlist form .playlist_container .top input:valid {
+    outline: none;
+    border: 1.5px solid #1a73e8;
+}
+
+#create_playlist form .playlist_container .top .input:focus~label,
+#create_playlist form .playlist_container .top input:valid~label {
+    transform: translateY(-50%) scale(0.8);
+    background-color: white;
+    padding: 0 .2em;
+    font-size: 1.3em;
+    font-weight: 700;
+    color: black;
+}
+.separator{
+    width: 100%;
+    height: 1px;
+    background-color: black;
+     margin: 0.5em auto;
+}
+.submit_button {
+    margin-top: 5%;
+    margin-inline: auto;
     cursor: pointer;
-}
-
-#cbx:checked~.cbx {
-    border-color: transparent;
-    background: #6871f1;
-    animation: jelly 0.6s ease;
-}
-
-#cbx:checked~.cbx:after {
-    opacity: 1;
-    transform: rotate(45deg) scale(1);
-}
-
-.cntr {
+    background: var(--green);
+    color: white;
+    font-family: inherit;
+    padding: 0.35em;
+    padding-left: 1.2em;
+    font-size: 17px;
+    font-weight: 500;
+    border-radius: 0.9em;
+    border: none;
+    letter-spacing: 0.05em;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
     position: relative;
+    height: 2.8em;
+    padding-right: 3.3em;
+    width: 100%;
+    font-size: 1.5em;
 }
 
-@keyframes jelly {
-    from {
-        transform: scale(1, 1);
-    }
-
-    30% {
-        transform: scale(1.25, 0.75);
-    }
-
-    40% {
-        transform: scale(0.75, 1.25);
-    }
-
-    50% {
-        transform: scale(1.15, 0.85);
-    }
-
-    65% {
-        transform: scale(0.95, 1.05);
-    }
-
-    75% {
-        transform: scale(1.05, 0.95);
-    }
-
-    to {
-        transform: scale(1, 1);
-    }
+.submit_button .icon {
+    background: white;
+    margin-left: 1em;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    bottom: 0.3em;
+    height: 2.2em;
+    width: 2.2em;
+    border-radius: 0.7em;
+    right: 0.3em;
+    transition: all 0.3s;
 }
 
-.hidden-xs-up {
-    display: none !important;
+.submit_button:hover .icon {
+    width: calc(100% - 0.6em);
 }
 
+.submit_button .icon svg {
+    width: 1.1em;
+    transition: transform 0.3s;
+    color: var(--pink);
+}
+
+.submit_button:hover .icon svg {
+    transform: translateX(0.1em);
+}
+
+.submit_button:active .icon {
+    transform: scale(0.95);
+}
 /* -------------GENERATE PLAYLIST------------- */
 #generate_playlist {
     height: 100vh;
