--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -635,7 +635,7 @@ nav .right .log_text {
     .responsive_nav {
         z-index: 9999;
         display: flex;
-        justify-content: right;
+        justify-content: space-between;
         align-items: center;
     }
 
