--- a/templates/create_playlist.html
+++ b/templates/create_playlist.html
@@ -34,7 +34,7 @@
         </div>
         <div class="separator"></div>
         <div class="bottom">
-          <!-- Artists -->
+          <h2 id="empty" class="hidden">No artists added</h2>
         </div>
         <input type="hidden" name="artists" id="list_ids" />
         <button type = 'image' class="submit_button" type="submit"> Generate playlist
