--- a/templates/generate_playlist.html
+++ b/templates/generate_playlist.html
@@ -2,9 +2,13 @@
 {% load static %}
 {% block content%}
 <body>
-    <section id = "generate_playlist" style = "background-image: url('{% static 'svg/Sprinkle.svg' %}'); ">
-        <h1>Playlist generated!</h1>
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/{{playlist_id}}" width="50%" height="50%" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+    <section id = "generate_playlist">
+        <div class="container">
+            <h1>Playlist generated!</h1>
+
+            <a href="{{url}}">{{url}}</a>
+        </div>
+
     </section>
 </body>
 {%  endblock %}
