--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -49,7 +49,7 @@ html {
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    height: 35vh;
+    height: 39vh;
 }
 
 a {
@@ -263,15 +263,12 @@ nav .right .log_text {
 
 #tutorial .container {
     margin: auto;
-    width: 40%;
+    width: max(40%,40em);
     height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 3em;
-    background-color: #FFE9FF;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-    box-shadow: 0px 0px 30px 5px rgba(0, 0, 0, 0.3);
 }
 
 #tutorial .container .step {
@@ -283,7 +280,28 @@ nav .right .log_text {
     align-items: center;
     border-bottom: 1px black solid;
 }
-
+#tutorial .container .step .options{
+    display: flex;
+    gap: 15px;
+}
+#tutorial .container .step .box{
+    cursor: pointer;
+    height: 150px;
+    width: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    line-height: 15px;
+    font-weight: 900;
+    background-color: #04D94F;
+}
+#tutorial .container .step .box.blue {
+    background-color: var(--blue);
+}
+#tutorial .container .step .box.pink {
+    background-color: var(--pink);
+}
 #tutorial .container .cloud {
     font-size: 3.1em;
     text-align: center;
@@ -649,7 +667,10 @@ nav .right .log_text {
         text-align: center;
         margin: 0;
     }
+    #tutorial .container {
+        width:100%;
 
+    }
     .nav {
         display: none;
     }
