--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -122,7 +122,7 @@ nav .login {
 }
 
 nav .right {
-    margin: 0 3%;
+    margin: 0 15px;
     flex-direction: column;
     gap: 5px;
     justify-content: center;
