change post request from generate playlist

--- a/templates/create_playlist.html
+++ b/templates/create_playlist.html
@@ -28,6 +28,7 @@
               name="name"
               autocomplete="off"
               class="input"
+              id = "name_input"
             />
             <label class="user-label">Playlist's name</label>
           </div>
