--- a/templates/create_playlist.html
+++ b/templates/create_playlist.html
@@ -47,5 +47,6 @@
     </form>
   </section>
   <script src="{% static 'js/get_artist.js' %}"></script>
+  <script src="{% static 'js/get_playlist.js' %}"></script>
 </body>
 {% endblock %}
