--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -496,27 +496,27 @@ nav .right .log_text {
     padding: 10px;
 }
 
-#create_playlist form {
+#create_playlist #playlist_form {
 
     width: 100%;
 }
 
-#create_playlist form .playlist_container {
+#create_playlist #playlist_form .playlist_container {
     margin: 0 auto;
     width: min(95%, 40em);
     position: relative;
 }
 
-#create_playlist form .playlist_container .top {
+#create_playlist #playlist_form .playlist_container .top {
     display: flex;
     justify-content: center;
 }
 
-#create_playlist form .playlist_container .top .input-group {
+#create_playlist #playlist_form .playlist_container .top .input-group {
     position: relative;
 }
 
-#create_playlist form .playlist_container .top .input {
+#create_playlist #playlist_form .playlist_container .top .input {
     border: solid 1.5px #9e9e9e;
     border-radius: 5px;
     box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
@@ -527,7 +527,7 @@ nav .right .log_text {
     transition: border 150ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-#create_playlist form .playlist_container .top .user-label {
+#create_playlist #playlist_form .playlist_container .top .user-label {
     position: absolute;
     left: 15px;
     color: rgba(0, 0, 0, 0.5);
@@ -536,14 +536,14 @@ nav .right .log_text {
     transition: 150ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-#create_playlist form .playlist_container .top .input:focus,
-#create_playlist form .playlist_container .top input:valid {
+#create_playlist #playlist_form .playlist_container .top .input:focus,
+#create_playlist #playlist_form .playlist_container .top input:valid {
     outline: none;
     border: 1.5px solid #1a73e8;
 }
 
-#create_playlist form .playlist_container .top .input:focus~label,
-#create_playlist form .playlist_container .top input:valid~label {
+#create_playlist #playlist_form .playlist_container .top .input:focus~label,
+#create_playlist #playlist_form .playlist_container .top input:valid~label {
     transform: translateY(-50%) scale(0.8);
     background-color: white;
     padding: 0 .2em;
@@ -552,12 +552,12 @@ nav .right .log_text {
     color: black;
 }
 
-#create_playlist form .playlist_container .bottom #empty {
+#create_playlist #playlist_form .playlist_container .bottom #empty {
     width: 100%;
     text-align: center;
 }
 
-#create_playlist form .playlist_container .bottom #empty.hidden {
+#create_playlist #playlist_form .playlist_container .bottom #empty.hidden {
     display: none;
 }
 
