--- a/templates/create_playlist.html
+++ b/templates/create_playlist.html
@@ -17,7 +17,7 @@
         </div>
       </div>
     </div>
-    <form action="{% url 'generateplaylist' %}" method="POST" id="playlist_form">
+    <div id="playlist_form">
       {% csrf_token %}
       <div class="playlist_container">
         <div class="top">
@@ -44,7 +44,7 @@
           </button>
       </a>
       </div>
-    </form>
+    </div>
   </section>
   <script src="{% static 'js/get_artist.js' %}"></script>
   <script src="{% static 'js/get_playlist.js' %}"></script>
