Add loader view when clicked generatePlaylist

--- a/templates/create_playlist.html
+++ b/templates/create_playlist.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %} {% load static %} {% block content%}
 <body>
+
   <section id="create_playlist">
     <div class="container">
       <h3>Select the artists</h3>
@@ -45,7 +46,10 @@
       </a>
       </div>
     </div>
-  </section>
+  </section> 
+  <div class= "loader_container">
+    <div class="loader "><div></div><div></div><div></div><div></div></div>
+  </div>
   <script src="{% static 'js/get_artist.js' %}"></script>
   <script src="{% static 'js/get_playlist.js' %}"></script>
 </body>
