--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -394,7 +394,9 @@ nav .right .log_text {
     align-items: center;
     background-color: white;
 }
-
+#create_playlist.hide {
+    display: none;
+}
 #create_playlist .container {
     height: auto;
     min-height: 350px;
@@ -560,6 +562,53 @@ nav .right .log_text {
 #create_playlist #playlist_form .playlist_container .bottom #empty.hidden {
     display: none;
 }
+.loader_container {
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.loader {
+    display: none;
+    position: relative;
+    width: 80px;
+    height: 80px;
+  }
+  .loader.show {
+    display: inline;
+  }
+  .loader div {
+    box-sizing: border-box;
+    display: block;
+    position: absolute;
+    width: 64px;
+    height: 64px;
+    margin: 8px;
+    border: 8px solid var(--green);
+    border-radius: 50%;
+    animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+    border-color: var(--green) transparent transparent transparent;
+  }
+  .loader div:nth-child(1) {
+    animation-delay: -0.45s;
+  }
+  .loader div:nth-child(2) {
+    animation-delay: -0.3s;
+  }
+  .loader div:nth-child(3) {
+    animation-delay: -0.15s;
+  }
+  @keyframes lds-ring {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+
 
 .separator {
     width: 100%;
