--- a/DjangoPlaylisty/templates/home.html
+++ b/DjangoPlaylisty/templates/home.html
@@ -3,7 +3,6 @@
 <body>
   <section id="banner">
     <div>
-      <h2 class="welcome">Welcome to</h2>
       <h1 class="Listify_tittle">Playlisty</h1>
       <h2>Create and Custom </h2>
       <h1><span class="spotify">Spotify </span><span class="playlists">Playlists</span></h1>
@@ -27,7 +26,7 @@
   </section>
   <div
     class="inter"
-    style="background-image: url('{% static 'svg/wave.svg' %}')"></div>
+    style="background-image: url('{% static 'svg/bg.svg' %}')"></div>
   <section id="tutorial">
     <h2>Get started</h2>
     <div class="container">
