--- a/DjangoPlaylisty/static/styles/main.css
+++ b/DjangoPlaylisty/static/styles/main.css
@@ -49,7 +49,7 @@ html {
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    height: 39vh;
+    height: auto;
 }
 
 a {
